--- a/packages/platform-hub/package.json
+++ b/packages/platform-hub/package.json
@@ -5,15 +5,18 @@
   "author": "Andrea Law <abylaw@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development NODE_APP_MODE=app webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production NODE_APP_MODE=app webpack --progress --hide-modules",
+    "dev": "cross-env NODE_ENV=development NODE_APP_MODE=app webpack-dev-server --mode=development --open --hot",
+    "build": "cross-env NODE_ENV=production NODE_APP_MODE=app webpack --mode=production --progress --hide-modules",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "bulma": "^0.7.1",
+    "style-loader": "^0.21.0",
     "vue": "^2.5.16",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-style-loader": "^4.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
@@ -25,7 +28,7 @@
     "compression-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.5",
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.11",
     "eslint": "^4.4.1",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -49,13 +52,12 @@
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^3.0.0",
     "phantomjs-prebuilt": "^2.1.14",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^6.0.7",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "vue-loader": "^15.0.2",
     "vue-template-compiler": "^2.4.2",
