--- a/packages/asyncy.com/package.json
+++ b/packages/asyncy.com/package.json
@@ -25,7 +25,7 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "for p in ./plugins/*; do (cd $p; npm install); done",
-    "build": "gatsby build",
+    "build": "gatsby build && mv public/ dist/",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
