--- a/packages/platform-hub/package.json
+++ b/packages/platform-hub/package.json
@@ -51,6 +51,7 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
+    "mini-css-extract-plugin": "^0.4.0",
     "mocha": "^3.2.0",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^3.0.0",
@@ -59,7 +60,7 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.9",
-    "vue-loader": "^15.0.2",
+    "vue-loader": "^15.0.0-rc.2",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
