--- a/packages/asyncy.com/package.json
+++ b/packages/asyncy.com/package.json
@@ -17,7 +17,8 @@
     "gatsby-transformer-yaml": "^1.5.16",
     "react-helmet": "^5.2.0",
     "react-slotted": "^0.1.0",
-    "typed.js": "^2.0.6"
+    "typed.js": "^2.0.6",
+    "validate.js": "^0.12.0"
   },
   "keywords": [
     "gatsby"
