--- a/packages/platform-hub/package.json
+++ b/packages/platform-hub/package.json
@@ -12,9 +12,16 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.2.1",
+    "apollo-client": "^2.3.1",
+    "apollo-link": "^1.2.2",
+    "apollo-link-http": "^1.5.4",
     "bulma": "^0.7.1",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "style-loader": "^0.21.0",
     "vue": "^2.5.16",
+    "vue-apollo": "^3.0.0-alpha.3",
     "vue-pagination-2": "^1.6.1",
     "vue-router": "^2.7.0",
     "vue-style-loader": "^4.1.0",
