--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
 	"scripts": {
 		"bootstrap": "lerna bootstrap",
+		"bootstrap-only": "lerna bootstrap $(ls packages | xargs -n1 basename | grep -v $LERNA_ONLY | xargs -n1 echo '--ignore')",
 		"build": "for d in ./packages/* ; do (cd $d; npm run build); done",
+		"build-only": "(cd packages/$LERNA_ONLY; npm run build)",
 		"postbuild": "rm -rf dist/; mkdir dist; for d in ./packages/* ; do (cp -R $d/dist/ ./dist/) done"
 	},
 	"devDependencies": {
